# learn-cpp

./: .gitignore  CmakeLists.txt  devenv.nix  main.cpp  naminghelper.h  pred.h  testinghelper.h
tests/: CMakeLists.txt  enums.h  hello_test.cc  pred_test.cc
